creates pararaph in readme file

--- a/about-us.html
+++ b/about-us.html
@@ -59,7 +59,7 @@
     <main id="main">
         <div class="text-center about-page-sect">
             <h1>Arany Paramalingam</h1>
-            <img src="images/about-page/Snapchat-204179317.jpg" alt="logo image"></img>
+            <img src="images/about-page/Snapchat-204179317.jpg" alt="image of arany"></img>
         </div>
         <div class="aboutmebtn">
             <a href="#" role="button">About Me</a>
