--- a/about-us.html
+++ b/about-us.html
@@ -64,6 +64,12 @@
         <div class="aboutmebtn">
             <a href="#" role="button">About Me</a>
         </div>
+        <div class="text-center about-page-sect">
+            <img src="images/about-page/logoimd.png" alt="image of arany"></img>
+        </div>
+        <div class="aboutmebtn">
+            <a href="#" role="button">My Certification</a>
+        </div>
     </main>
 
     <!--Foter with copyright-->
