--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,42 @@
         </header>
     <!--main with wrapper-->
     <main id="main">
+        <div class="mywork-sect">
+            <h1>My Works</h1>
+        </div>
+        <div>
+            <div class="text-center">
+                <img class="work-img" src="images/portfolio-page/1.png" alt="image of my persona 1">
+            </div>
+            <div class="text-center">
+                <img class="work-img" src="images/portfolio-page/Artboard 1.png" alt="image of my persona 1">
+            </div>
+            <div class="text-center">
+                <img class="work-img" src="images/portfolio-page/2.png" alt="image of my persona 1">
+            </div>
+            <div class="text-center">
+                <img class="work-img" src="images/portfolio-page/creativebrief.png" alt="image of my persona 1">
+            </div>
+            <div class="text-center">
+                <img class="work-img" src="images/portfolio-page/3.png" alt="image of my persona 1">
+            </div>
+            <div class="text-center">
+                <img class="work-img" src="images/portfolio-page/E04Coverpage.png" alt="image of my persona 1">
+            </div>
+            <div class="text-center">
+                <img class="work-img" src="images/portfolio-page/4.png" alt="image of my persona 1">
+            </div>
+            <div class="text-center">
+                <img class="work-img" src="images/portfolio-page/large-itunes-avatar_aranyparamalingam.jpg" alt="image of my persona 1">
+            </div>
+            <div class="text-center">
+                <img class="work-img" src="images/portfolio-page/logo.png" alt="image of my persona 1">
+            </div>
+            <div class="text-center">
+                <img class="work-img" src="images/portfolio-page/Logos.png" alt="image of my persona 1">
+            </div>
+        </div>
+        
     </main>
 
     <!--Foter with copyright-->
