adds css library, which is animations

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,9 @@
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
          <link href="css/reset.css" rel="stylesheet">
          <link href="css/main.css" rel="stylesheet">
+
+         <!--Css Library-->
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     
     <title>Portfolio</title>
 </head>
@@ -33,7 +36,7 @@
             <!--Navbar from bootstrap, changed colors and list items-->
             <nav id="nav" class="navbar navbar-expand-sm bg-info text-white padding-on-text">
                 <div class="container-fluid">
-                  <a class="navbar-brand text-white logo" href="index.html">AP</a>
+                  <a class="navbar-brand text-white logo animate__animated animate__lightSpeedInLeft" href="index.html">AP</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -54,9 +57,10 @@
                 </div>
               </nav>
         </header>
-    <!--main with wrapper-->
+    <!--main-->
     <main id="main">
-        <div class="mywork-sect">
+        <!--Header and a row of images showing my work-->
+        <div class="mywork-sect animate__animated animate__bounce">
             <h1>My Works</h1>
         </div>
         <div>
