--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
          <link href="css/reset.css" rel="stylesheet">
          <link href="css/main.css" rel="stylesheet">
+
+          <!--Css Library-->
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     
     <title>Portfolio</title>
 </head>
@@ -31,7 +34,7 @@
             <!--Navbar from bootstrap, changed colors and list items-->
             <nav id="nav" class="navbar navbar-expand-sm bg-info text-white padding-on-text">
                 <div class="container-fluid">
-                  <a class="navbar-brand text-white logo" href="index.html">AP</a>
+                  <a class="navbar-brand text-white logo animate__animated animate__lightSpeedInLeft" href="index.html">AP</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -56,7 +59,7 @@
     <!--main with wrapper-->
     <main id="main">
         <div class="text-center about-sect">
-            <h1>Arany Paramalingam</h1>
+            <h1 class="animate__animated animate__bounce">Arany Paramalingam</h1>
             <a href="about-us.html"><img src="images/home-page/self-photo-wedev.jpg" alt="logo image"></img></a>
             <p>Learn more about who I am</p>
         </div>
