removes search bar

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,10 +49,6 @@
                         <a class="nav-link active text-white navfont" aria-current="page" href="portfolio.html">Portfolio</a>
                       </li>
                     </ul>
-                    <form class="d-flex" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                   </div>
                 </div>
               </nav>
@@ -98,7 +94,7 @@
         
     </main>
 
-    <!--Foter with copyright-->
+    <!--Fo0ter with copyright-->
     <footer id="footer" class="padding-on-text bg-info text-white">
         <p>&#169; Arany Paramalingam, 2023</p>
     </footer>
