makes index desktop friendly

--- a/index.html
+++ b/index.html
@@ -54,15 +54,18 @@
 
     <!--main with wrapper-->
     <main id="main">
-        <div class="text-center about-sect">
+        <div class="text-center about-sect about-sect1">
             <h1 class="animate__animated animate__bounce">Arany Paramalingam</h1>
             <a href="about-us.html"><img src="images/home-page/self-photo-wedev.jpg" alt="logo image"></img></a>
-            <p>Learn more about who I am</p>
+            <p>Welcome to my portfolio website! You can learn more about the person I am down below, or you can explore my other pages.</p>
         </div>
 
-        <div class="text-center about-sect">
+        <div class="text-center about-sect about-sect2">
             <a href="portfolio.html"><img src="images/home-page/Web 1920 – 1.png" alt="logo image"></img></a>
-            <p>Come look at my portfolio</p>
+            <p>Here, you will find examples of my projects,
+                achievements, and career goals, all 
+                presented in a visually appealing and 
+                user-friendly manner. </p>
         </div>
     </main>
 
