--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
             <li role="listitem"><a href="#main" aria-label="Skip to main">Skip to main content</a></li>
             <li role="listitem"><a href="#footer" aria-label="Skip to the welcome section">Skip to footer</a></li>
           </ul>
-        <header>
+        <header role="banner">
             <!--Navbar from bootstrap, changed colors and list items-->
-            <nav id="nav" class="navbar navbar-expand-sm bg-info text-white padding-on-text">
+            <nav id="nav" class="navbar navbar-expand-sm bg-info text-white padding-on-text" role="navigation" aria-label="Main Navigation">
                 <div class="container-fluid">
                   <a class="navbar-brand text-white logo animate__animated animate__lightSpeedInLeft" href="index.html">AP</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0" role="menubar">
                       <li class="nav-item">
                         <a class="nav-link active text-white navfont" aria-current="page" href="index.html">Home</a>
                         <a class="nav-link active text-white navfont" aria-current="page" href="contact.html">Contact Us</a>
@@ -53,9 +53,9 @@
         </header>
 
     <!--main with wrapper-->
-    <main id="main">
+    <main id="main" role="main">
         <div class="text-center about-sect about-sect1">
-            <h1 class="animate__animated animate__bounce">Arany Paramalingam</h1>
+            <h1 class="animate__animated animate__bounce" itemscope itemtype="http://schema.org/Person">Arany Paramalingam</h1>
             <a href="about-us.html"><img src="images/home-page/self-photo-wedev.jpg" alt="logo image"></img></a>
             <p>Welcome to my portfolio website! You can learn more about the person I am down below, or you can explore my other pages.</p>
         </div>
@@ -70,7 +70,7 @@
     </main>
 
     <!--Foter with copyright-->
-    <footer id="footer" class="padding-on-text bg-info text-white">
+    <footer id="footer" class="padding-on-text bg-info text-white" role="contentinfo">
         <p>&#169; Arany Paramalingam, 2023</p>
     </footer>
 
