--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,9 @@
             <li role="listitem"><a href="#footer" aria-label="Skip to the welcome section">Skip to footer</a></li>
           </ul>
     </div>
-        <header>
+        <header role="banner">
             <!--Navbar from bootstrap, changed colors and list items-->
-            <nav id="nav" class="navbar navbar-expand-sm bg-info text-white padding-on-text">
+            <nav id="nav" class="navbar navbar-expand-sm bg-info text-white padding-on-text" role="navigation">
                 <div class="container-fluid">
                   <a class="navbar-brand text-white logo animate__animated animate__lightSpeedInLeft" href="index.html">AP</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,7 @@
               </nav>
         </header>
     <!--main-->
-    <main id="main">
+    <main id="main" role="main">
         <!--Header and a row of images showing my work-->
         <div class="mywork-sect animate__animated animate__bounce">
             <h1>My Works</h1>
@@ -95,7 +95,7 @@
     </main>
 
     <!--Fo0ter with copyright-->
-    <footer id="footer" class="padding-on-text bg-info text-white">
+    <footer id="footer" class="padding-on-text bg-info text-white" role="contentinfo">
         <p>&#169; Arany Paramalingam, 2023</p>
     </footer>
 
