fixed portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,35 +59,35 @@
         <div class="mywork-sect animate__animated animate__bounce">
             <h1>My Works</h1>
         </div>
-        <div>
-            <div class="text-center">
+        <div class="work-container">
+            <div class="text-center box1">
                 <img class="work-img" src="images/portfolio-page/1.png" alt="image of my persona 1">
             </div>
-            <div class="text-center">
+            <div class="text-center box2">
                 <img class="work-img" src="images/portfolio-page/Artboard 1.png" alt="image of my persona 1">
             </div>
-            <div class="text-center">
+            <div class="text-center box3">
                 <img class="work-img" src="images/portfolio-page/2.png" alt="image of my persona 1">
             </div>
-            <div class="text-center">
+            <div class="text-center box4">
                 <img class="work-img" src="images/portfolio-page/creativebrief.png" alt="image of my persona 1">
             </div>
-            <div class="text-center">
+            <div class="text-center box5">
                 <img class="work-img" src="images/portfolio-page/3.png" alt="image of my persona 1">
             </div>
-            <div class="text-center">
+            <div class="text-center box6">
                 <img class="work-img" src="images/portfolio-page/E04Coverpage.png" alt="image of my persona 1">
             </div>
-            <div class="text-center">
+            <div class="text-center box7">
                 <img class="work-img" src="images/portfolio-page/4.png" alt="image of my persona 1">
             </div>
-            <div class="text-center">
+            <div class="text-center box8">
                 <img class="work-img" src="images/portfolio-page/large-itunes-avatar_aranyparamalingam.jpg" alt="image of my persona 1">
             </div>
-            <div class="text-center">
+            <div class="text-center box9">
                 <img class="work-img" src="images/portfolio-page/logo.png" alt="image of my persona 1">
             </div>
-            <div class="text-center">
+            <div class="text-center box10">
                 <img class="work-img" src="images/portfolio-page/Logos.png" alt="image of my persona 1">
             </div>
         </div>
