validates css and html

--- a/about-us.html
+++ b/about-us.html
@@ -58,13 +58,13 @@
     <main id="main" role="main">
         <div class="text-center about-page-sect">
             <h1 class="animate__animated animate__bounce" itemscope itemtype="http://schema.org/Person">Arany Paramalingam</h1>
-            <img src="images/about-page/Snapchat-204179317.jpg" alt="image of arany"></img>
+            <img src="images/about-page/Snapchat-204179317.jpg" alt="image of arany">
         </div>
         <div class="aboutmebtn">
             <a href="#" role="button">About Me</a>
         </div>
         <div class="text-center about-page-sect">
-            <img src="images/about-page/logoimd.png" alt="image of arany"></img>
+            <img src="images/about-page/logoimd.png" alt="image of arany">
         </div>
         <div class="aboutmebtn">
             <a href="#" role="button">My Certification</a>
