--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
     <main id="main" role="main">
         <div class="text-center about-sect about-sect1">
             <h1 class="animate__animated animate__bounce" itemscope itemtype="http://schema.org/Person">Arany Paramalingam</h1>
-            <a href="about-us.html"><img src="images/home-page/self-photo-wedev.jpg" alt="logo image"></img></a>
+            <a href="about-us.html"><img src="images/home-page/self-photo-wedev.jpg" alt="logo image"></a>
             <p>Welcome to my portfolio website! You can learn more about the person I am down below, or you can explore my other pages.</p>
         </div>
 
         <div class="text-center about-sect about-sect2">
-            <a href="portfolio.html"><img src="images/home-page/Web 1920 – 1.png" alt="logo image"></img></a>
+            <a href="portfolio.html"><img src="images/home-page/web1920–1.png" alt="logo image"></a>
             <p>Here, you will find examples of my projects,
                 achievements, and career goals, all 
                 presented in a visually appealing and 
