--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
           <form itemscope itemtype="http://schema.org/ContactPage">
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Full Name</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="email" class="form-control" id="exampleInputEmail1">
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Password</label>
