--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
                 <img class="work-img" src="images/portfolio-page/1.png" alt="image of my persona 1">
             </div>
             <div class="text-center box2">
-                <img class="work-img" src="images/portfolio-page/Artboard 1.png" alt="image of my persona 1">
+                <img class="work-img" src="images/portfolio-page/artboard1.png" alt="image of my persona 1">
             </div>
             <div class="text-center box3">
                 <img class="work-img" src="images/portfolio-page/2.png" alt="image of my persona 1">
