--- a/portfolio.html
+++ b/portfolio.html
@@ -90,6 +90,21 @@
             <div class="text-center box10">
                 <img class="work-img" src="images/portfolio-page/Logos.png" alt="image of my persona 1">
             </div>
+            <div class="text-center box11">
+                <img class="work-img" src="images/portfolio-page/webdevsweetwheat1.png" alt="image of my persona 1">
+            </div>
+            <div class="text-center box12">
+                <img class="work-img" src="images/portfolio-page/Paramalingam_A_1.jpg" alt="image of my persona 1">
+            </div>
+            <div class="text-center box13">
+                <img class="work-img" src="images/portfolio-page/Paramalingam_A_12.jpg" alt="image of my persona 1">
+            </div>
+            <div class="text-center box14">
+                <img class="work-img" src="images/portfolio-page/webdevsweetwheat2.png" alt="image of my persona 1">
+            </div>
+            <div class="text-center box15">
+                <img class="work-img" src="images/portfolio-page/Paramalingam_A_14.jpg" alt="image of my persona 1">
+            </div>
         </div>
         
     </main>
